--- a/pyproject.toml
+++ b/pyproject.toml
@@ -220,7 +220,7 @@ test = ["coverage"]
 # maintainers, and where to support the project financially. The key is
 # what's used to render the link text on PyPI.
 [project.urls]
-"Homepage" = "https://github.com/james/talk-to-bob"
+"Homepage" = "https://github.com/james/chat-with-docs"
 
 
 # The following would provide a command line executable called `sample`
